clusters/managed/devbench/gitea/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app gitea
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://git.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/description: "Gitea"
    gethomepage.dev/icon: *app
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Git
    gethomepage.dev/weight: "10"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=gitea"
    gethomepage.dev/widget.type: gitea
    gethomepage.dev/widget.url: "http://gitea-http.mgd-devbench.svc.cluster.local.:3000"
    gethomepage.dev/widget.key: "${GITEA_API_TOKEN}"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`git.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
